--- a/webapp/public/styles.css
+++ b/webapp/public/styles.css
@@ -1,5 +1,6 @@
 .chatbot-trigger{
-    //@include transition(all 0.3s ease-out);
+    -webkit-transition: all 0.3s ease-out; /* Safari */
+    transition: all 0.3s ease-out;
 }
 
 .chatClosed {
@@ -13,7 +14,7 @@
     position: fixed;
     bottom: 40px;
     right: -19px;
-    //@include border-radius(24px);
+    border-radius: 24px;
 
     &:hover {
         background-color: #F0F0F0;
@@ -27,15 +28,13 @@
     background-color: #EBEBEB;
     right: 40px;
     bottom: 120px;
-    //@include border-radius(16px);
-    //@include box-shadow(0px 0px 6px rgba(0,0,0,.15));
+    border-radius: 16px;
     overflow: hidden;
     display: none;
 
     .chat {
         height: 400px;
         padding: 15px;
-        //@include box-sizing(border-box);
         overflow-y: auto;
     }
 
@@ -54,7 +53,7 @@
             line-height: 20px;
             display: inline-block;
             max-width: 84%;
-            //@include border-radius(20px);
+            border-radius : 20px;
         }
     }
 
@@ -160,7 +159,7 @@
     position: fixed;
     bottom: 40px;
     right: 39px;
-    //@include border-radius(24px);
+    border-radius:4px;
 
     &:hover {
         background-color: #F0F0F0;
