--- a/webapp/public/styles.css
+++ b/webapp/public/styles.css
@@ -7,7 +7,7 @@
     width: 147px;
     height: 48px;
     display: inline-block;
-    background-color: #F0F0F0;
+    background-color: #00D46A;
     color: #fff;
     line-height: 48px;
     text-align: center;
@@ -17,7 +17,7 @@
     border-radius: 24px;
 
     &:hover {
-        background-color: #F0F0F0;
+        box-shadow: 0px 0px 6px rgba(0,0,0,.15);
         color: #fff;
     }
 }
