--- a/webapp/public/styles.css
+++ b/webapp/public/styles.css
@@ -4,17 +4,18 @@
 }
 
 .chatClosed {
-    width: 147px;
+    width: 48px;
     height: 48px;
     display: inline-block;
-    background-color: #00D46A;
     color: #fff;
     line-height: 48px;
     text-align: center;
     position: fixed;
     bottom: 40px;
-    right: -19px;
+    right: 39px;
     border-radius: 24px;
+    z-index: 99999;
+    background-color: #00D46A;
 
     &:hover {
         box-shadow: 0px 0px 6px rgba(0,0,0,.15);
@@ -152,17 +153,18 @@
     width: 48px;
     height: 48px;
     display: inline-block;
-    background-color: #1a79a1;
     color: #fff;
     line-height: 48px;
     text-align: center;
     position: fixed;
     bottom: 40px;
     right: 39px;
-    border-radius:4px;
+    border-radius: 24px;
+    z-index: 99999;
+    background-color: #00D46A;
 
     &:hover {
-        background-color: #F0F0F0;
+        box-shadow: 0px 0px 6px rgba(0,0,0,.15);
         color: #fff;
     }
 }
