--- a/webapp/public/styles.css
+++ b/webapp/public/styles.css
@@ -189,4 +189,16 @@ body {
     width: 100%;
 }
 
+.ml10{
+    margin-left: 10px
+}
+
+.mr10{
+    margin-right: 10px
+}
+
+.onlinePeolple{
+    position: absolute;
+    right: 32px;
+}
 
