--- a/webapp/public/styles.css
+++ b/webapp/public/styles.css
@@ -223,9 +223,8 @@ a:focus, a:hover {
 }
 
 .container-1 input#search{
-  width: 300px;
+  width: 100%;
   height: 50px;
-  background: #2b303b;
   border: none;
   font-size: 10pt;
   float: left;
@@ -239,6 +238,8 @@ a:focus, a:hover {
 -ms-transition: background .55s ease;
 -o-transition: background .55s ease;
 transition: background .55s ease;
+    background: #ffffff;
+    border-style: solid;
 }
 
 .container-1 input#search::-webkit-input-placeholder {
@@ -266,7 +267,3 @@ transition: background .55s ease;
   color: #4f5b66;
 }
 
-.container-1 input#search:hover, .container-1 input#search:focus, .container-1 input#search:active{
-    outline:none;
-    background: #ffffff;
-  }
